@@ -45,7 +45,11 @@
 
 #include <libbfio.h>
 
+#if defined( HAVE_MULTI_THREAD_SUPPORT ) && !defined( LIBBFIO_HAVE_MULTI_THREAD_SUPPORT )
+#error Multi-threading support requires libbfio with multi-threading support
 #endif
+
+#endif /* defined( HAVE_LOCAL_LIBBFIO ) */
 
 #endif
 
